--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!--about me section-->
             <div>
                 <h2 class="about-me-profession">Front-End Developer</h2>
-                <h1 class="about-name">Nikolai Hrebenyuk</h1>
+                <h1 class="about-name">Nikolai Grebenyuk</h1>
                 <p class="about-me">When a person really tries to search, he really finds.
                     I’m looking for interesting job as front-end developer in friendly, thriving, and
                     exciting company.</p>
