--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Grebenyuk Nikolai</title>
+    <title>Resume Grebenyuk Nikolay</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -18,7 +18,7 @@
             <!--about me section-->
             <div>
                 <h2 class="about-me-profession">Front-End Developer</h2>
-                <h1 class="about-name">Nikolai Grebenyuk</h1>
+                <h1 class="about-name">Nikolay Grebenyuk</h1>
                 <p class="about-me">When a person really tries to search, he really finds.
                     I’m looking for interesting job as front-end developer in friendly, thriving, and
                     exciting company.</p>
