--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1 class="about-name">Nikolay Grebenyuk</h1>
                 <p class="about-me">When a person really tries to search, he really finds.
                     I’m looking for interesting job as front-end developer in friendly, thriving, and
-                    exciting company.</p>
+                    exciting company.My goal is to become a Middle Frontend Developer in 1.5 - 2 years</p>
             </div>
             <!--My projects section-->
             <div class="My-projects-section">
